# Anigen

./: README.md  installer.iss  pubspec.yaml
.github/workflows/: windows.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/anigen/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: anime.dart
lib/providers/: anime_provider.dart  jikan_provider.dart
lib/screens/: anime_info_screen.dart  details_screen.dart  genre_anime_screen.dart  home_screen.dart  player_screen.dart  profile_screen.dart  search_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
lsfg-vk-develop/lsfg-vk-backend/: CMakeLists.txt
lsfg-vk-develop/lsfg-vk-backend/include/lsfg-vk-backend/: lsfgvk.hpp
lsfg-vk-develop/lsfg-vk-backend/src/: lsfgvk.cpp
lsfg-vk-develop/lsfg-vk-backend/src/extraction/: dll_reader.cpp  dll_reader.hpp  shader_registry.cpp  shader_registry.hpp
lsfg-vk-develop/lsfg-vk-backend/src/helpers/: limits.cpp  limits.hpp  managed_shader.cpp  managed_shader.hpp  utils.cpp  utils.hpp
lsfg-vk-develop/lsfg-vk-backend/src/shaderchains/: alpha0.cpp  alpha0.hpp  alpha1.cpp  alpha1.hpp  beta0.cpp  beta0.hpp  beta1.cpp  beta1.hpp  delta0.cpp  delta0.hpp  delta1.cpp  delta1.hpp  gamma0.cpp  gamma0.hpp  gamma1.cpp  gamma1.hpp  generate.cpp  generate.hpp  mipmaps.cpp  mipmaps.hpp
lsfg-vk-develop/lsfg-vk-cli/: .clang-tidy  CMakeLists.txt
lsfg-vk-develop/lsfg-vk-cli/src/: main.cpp
lsfg-vk-develop/lsfg-vk-cli/src/tools/: benchmark.cpp  benchmark.hpp  debug.cpp  debug.hpp  validate.cpp  validate.hpp
lsfg-vk-develop/lsfg-vk-common/: .clang-tidy  CMakeLists.txt
lsfg-vk-develop/lsfg-vk-common/include/lsfg-vk-common/configuration/: config.hpp  detection.hpp
lsfg-vk-develop/lsfg-vk-common/include/lsfg-vk-common/helpers/: errors.hpp  paths.hpp  pointers.hpp
lsfg-vk-develop/lsfg-vk-common/include/lsfg-vk-common/vulkan/: buffer.hpp  command_buffer.hpp  descriptor_pool.hpp  descriptor_set.hpp  fence.hpp  image.hpp  sampler.hpp  semaphore.hpp  shader.hpp  timeline_semaphore.hpp  vulkan.hpp
lsfg-vk-develop/lsfg-vk-common/src/configuration/: config.cpp  detection.cpp
lsfg-vk-develop/lsfg-vk-common/src/helpers/: errors.cpp  paths.cpp
lsfg-vk-develop/lsfg-vk-common/src/vulkan/: buffer.cpp  descriptor_pool.cpp  descriptor_set.cpp  fence.cpp  image.cpp  sampler.cpp  semaphore.cpp  shader.cpp  timeline_semaphore.cpp  vulkan.cpp
lsfg-vk-develop/lsfg-vk-layer/: .clang-tidy  CMakeLists.txt  VkLayer_LSFGVK_frame_generation.json.in
lsfg-vk-develop/lsfg-vk-layer/src/: entrypoint.cpp  instance.cpp  swapchain.cpp  swapchain.hpp
lsfg-vk-develop/lsfg-vk-ui/: .clang-tidy  CMakeLists.txt
lsfg-vk-develop/lsfg-vk-ui/rsc/: UI.qml  gay.pancake.lsfg-vk-ui.desktop
lsfg-vk-develop/lsfg-vk-ui/rsc/dialogs/: CenteredDialog.qml  LargeDialog.qml
lsfg-vk-develop/lsfg-vk-ui/rsc/panes/: Group.qml  GroupEntry.qml  Pane.qml
lsfg-vk-develop/lsfg-vk-ui/rsc/widgets/: FileEdit.qml  FlowSlider.qml  List.qml
lsfg-vk-develop/lsfg-vk-ui/src/: backend.cpp  backend.hpp  main.cpp  utils.cpp  utils.hpp
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
